[package]
name = "vangers-prm"
version = "0.1.0"
authors = ["Vitaliy Busko <vitaliy.opensource@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0"
thiserror = "1.0"
enum-primitive-derive = "0.2"
num-traits = "0.2"
